tests/pass/single_quote_strings_with_interpolation.kl
// f-strings work with both double and single quote delimiters.
fn inisiu() {
    textu nomi = "Joe";
    textu hello = f'Olá, "{nomi}", Tudo bom?';
    mostran(hello);
}