tests/fail/fail_fstring_undefined_var.kl
// f-string referencing an undeclared variable should be rejected.
fn inisiu() {
    mostran(f"Hello {nomi}");
}
